@@ -1268,7 +1268,9 @@
  STATE_990: "West Virginia"
  STATE_991: "Bielitz"
  STATE_992: "Troppau"
+ CZE_STATE_992: "Opava"
  STATE_993: "Freiwaldau"
+ CZE_STATE_993: "Jeseník"
  STATE_994: "Orava and Spiš"
  STATE_995: "Hlučínsko"
  STATE_996: "Oran"
