@@ -857,10 +857,13 @@
  VICTORY_POINTS_3548: "Mukacevo"
  VICTORY_POINTS_11539: "Žilina"
  VICTORY_POINTS_3583: "Troppau"
+ CZE_VICTORY_POINTS_3583: "Opava"
  VICTORY_POINTS_6562: "Olomouc"
  VICTORY_POINTS_9569: "Tábor"
  VICTORY_POINTS_9541: "Budweis"
+ CZE_VICTORY_POINTS_9541: "České Budějovice"
  VICTORY_POINTS_3585: "Carlsbad"
+ CZE_VICTORY_POINTS_3585: "Karlovy Vary"
  VICTORY_POINTS_11432: "Aussig"
  VICTORY_POINTS_11401: "Liberec"
  VICTORY_POINTS_3473: "Küstrin"
