@@ -3,3 +3,4 @@ Fixed Romanian focus Demand Banat not sending event to right country
 Fixed a Romanian event triggering when in Central Powers
 Fixed 'Preventing a Brain Drain' focus bypassing
 Fixed German decision "Fortify Aisne" not working
+Added Czech names for their states and vps when owned by Czechia
